# example-gh-workflow

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
src/fun_pckg/: fun.py
tests/: test_fun_pckg.py
